<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.Activites.AboutActivity"
    android:background="@drawable/background_image">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_advise_avatar_doctor"
            android:layout_centerHorizontal="true"
            android:id="@+id/about_id"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:layout_below="@id/about_id"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-black"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/covid_info1_ar"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:maxEms="30"
                android:padding="5dp"
                />
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/how_ar"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:fontFamily="casual"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:background="@drawable/textview_shape"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/covid_info2_ar"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="casual"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/covid_info1"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:maxEms="30"
                android:padding="5dp"
                />
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/how"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:fontFamily="casual"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:background="@drawable/textview_shape"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/covid_info2"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="casual"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:layout_marginBottom="5dp"
                android:gravity="center_horizontal" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>