<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_image"
    tools:context=".UI.Fragments.EmergencyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Urgent emergency numbers : "
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            />
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_5964548___call_mobile_phone_technology"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            >

            <Button
                android:id="@+id/first_number_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/call_btn_shape"
                android:drawableLeft="@drawable/ic_smartphone"
                android:gravity="center"
                android:text="@string/call"
                android:textColor="@color/white"
                app:rippleColor="@android:color/white" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/covid_number"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            >
            <Button
                android:id="@+id/second_number_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/call_btn_shape"
                android:drawableLeft="@drawable/ic_smartphone"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/call"
                app:rippleColor="@android:color/white" />
            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/ambulance_number"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            >
            <Button
                android:id="@+id/third_number_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/call_btn_shape"
                android:drawableLeft="@drawable/ic_smartphone"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/call"
                app:rippleColor="@android:color/white" />
            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/emergency_police"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">
            <Button
                android:id="@+id/fourth_number_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/call_btn_shape"
                android:drawableLeft="@drawable/ic_smartphone"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/call"
                app:rippleColor="@android:color/white" />
            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/fast_road_number"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>