<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.Fragments.WorldFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:background="@drawable/cards_shape">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="Worldwide"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/white"
            android:textSize="20sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:background="@drawable/round_shape"
                    android:text="-"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:id="@+id/world_total_cases_num"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/total_cases_both_lang"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:background="@drawable/round_shape"
                    android:text="-"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:id="@+id/world_total_deaths_num"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/total_deaths_both_lang"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:background="@drawable/round_shape"
                    android:text="-"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:id="@+id/world_total_recovered_num"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/recovered_cases_both_lang"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/swipe_refresh_world"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:id="@+id/world_recycler"
            />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>