<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    app:cardCornerRadius="8dp"
    android:id="@+id/country_card">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/doctor">

        <TextView
            android:id="@+id/title_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="----"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:chipBackgroundColor="@android:color/white"
            app:chipStrokeColor="#5d5d5d"
            app:chipStrokeWidth="2dp"
            app:layout_constraintBottom_toTopOf="@+id/country_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/country_card" />

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingTop="16dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/first_layer">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginLeft="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_cases_both_lang"
                        android:paddingBottom="5dp"
                        android:textColor="@color/navy"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/total_cases_world_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="-"
                        android:textAllCaps="true"
                        android:background="@drawable/cases_round_shape"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        app:chipBackgroundColor="@android:color/holo_orange_dark"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:gravity="right"
                    android:layout_marginRight="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/today_cases_both_lang"
                        android:textColor="@color/navy"
                        android:paddingBottom="5dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/today_cases_world_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:background="@drawable/cases_round_shape"
                        android:text="-"
                        android:textAllCaps="true"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/second_layer"
                android:layout_marginTop="15dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginLeft="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_deaths_both_lang"
                        android:paddingBottom="5dp"
                        android:textColor="@color/navy"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/total_deaths_world_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="-"
                        android:textAllCaps="true"
                        android:background="@drawable/cases_round_shape"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        app:chipBackgroundColor="@android:color/holo_orange_dark"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:gravity="right"
                    android:layout_marginRight="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/today_deaths_both_lang"
                        android:textColor="@color/navy"
                        android:paddingBottom="5dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/today_deaths_world_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:background="@drawable/cases_round_shape"
                        android:text="-"
                        android:textAllCaps="true"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="7dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recovered_cases_both_lang"
                android:textColor="@color/navy"
                android:paddingBottom="5dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/recovered_world_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="-"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:background="@drawable/cases_round_shape"
                android:textSize="14sp"
                android:textStyle="normal"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>